WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120669
REGRESSION(
r154781
): accessibility/notification-listeners.html is failing
https://bugs.webkit.org/show_bug.cgi?id=120669
Summary
REGRESSION(r154781): accessibility/notification-listeners.html is failing
Zan Dobersek
Reported
2013-09-04 01:42:47 PDT
The accessibility/notification-listeners.html layout test is failing since
r154781
.
http://trac.webkit.org/changeset/154781
http://webkit-test-results.appspot.com/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=accessibility%2Fnotification-listeners.html
Diff: --- /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/notification-listeners-expected.txt +++ /home/slave/webkitgtk/gtk-linux-64-release/build/layout-test-results/accessibility/notification-listeners-actual.txt @@ -5,7 +5,29 @@ Slider -FAIL selectNotificationCount should be 1. Was 0. +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXFocusedUIElementChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +SELECT AXInvalidStatusChanged +FAIL selectNotificationCount should be 1. Was 22. FAIL sliderNotificationCount should be 1. Was 0. FAIL globalNotificationCount should be 2. Was 0. PASS successfullyParsed is true
Attachments
Patch
(9.82 KB, patch)
2013-09-11 11:26 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
Patch
(10.79 KB, patch)
2013-09-11 11:41 PDT
,
Denis Nomiyama (dnomi)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Denis Nomiyama (dnomi)
Comment 1
2013-09-11 11:26:07 PDT
Created
attachment 211332
[details]
Patch
chris fleizach
Comment 2
2013-09-11 11:30:58 PDT
Comment on
attachment 211332
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=211332&action=review
> Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:192 > + return FALSE;
should this just be false (not FALSE)
> Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:220 > + return TRUE;
ditto about TRUE/true
Denis Nomiyama (dnomi)
Comment 3
2013-09-11 11:36:14 PDT
(In reply to
comment #2
)
> (From update of
attachment 211332
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=211332&action=review
> > > Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:192 > > + return FALSE; > > should this just be false (not FALSE)
Sure, I'll fix it. I based on the code at axObjectEventListener(), which has the same typo. I will fix both functions.
> > Tools/DumpRenderTree/atk/AccessibilityCallbacksAtk.cpp:220 > > + return TRUE; > > ditto about TRUE/true
Ok.
Denis Nomiyama (dnomi)
Comment 4
2013-09-11 11:41:54 PDT
Created
attachment 211335
[details]
Patch
WebKit Commit Bot
Comment 5
2013-09-12 02:30:27 PDT
Comment on
attachment 211335
[details]
Patch Clearing flags on attachment: 211335 Committed
r155599
: <
http://trac.webkit.org/changeset/155599
>
WebKit Commit Bot
Comment 6
2013-09-12 02:30:30 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug